fix homepage feature bullet spacing

--- a/src/components/css/featuressection.css
+++ b/src/components/css/featuressection.css
@@ -11,4 +11,8 @@
   .features-section {
     flex-direction: column;
   }
+
+  .bullet-land {
+    margin-bottom: 4rem;
+  }
 }
